align-items: stretch; to fix buttons shifted from one side

--- a/client/src/components/ControlBar/ControlBar.css
+++ b/client/src/components/ControlBar/ControlBar.css
@@ -24,6 +24,7 @@
   flex-basis: 40%;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
 }
 
 .lastRun{
